<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pagesBackground"
    tools:context=".finding.FindingProductSubActivity">

    <SeekBar
        android:id="@+id/findingPowerSeekBar0"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="26dp"
        android:max="4"
        app:layout_constraintBottom_toTopOf="@+id/scrollView20"
        app:layout_constraintEnd_toStartOf="@+id/findingPowerTextView0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/findingPowerTextView0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="23dp"
        android:text="قدرت سیگنال(5dB)"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/pictureView0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/findingPowerSeekBar0"
        app:layout_constraintTop_toTopOf="parent" />

    <WebView
        android:id="@+id/pictureView0"
        android:layout_width="157dp"
        android:layout_height="253dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollView20"
        app:layout_constraintTop_toBottomOf="@+id/findingPowerTextView0" />

    <Button
        android:id="@+id/finding_sub_clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="23dp"
        android:onClick="clearEPCs"
        android:text="پاک کردن"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkBox0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView40" />

    <ScrollView
        android:id="@+id/scrollView20"
        android:layout_width="0dp"
        android:layout_height="251dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView40"
        app:layout_constraintEnd_toStartOf="@+id/pictureView0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findingPowerSeekBar0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/findingSubProductSpec"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView40"
        android:layout_width="0dp"
        android:layout_height="191dp"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toStartOf="@+id/finding_sub_number_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictureView0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/finding_sub_epc_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="11dp"
                android:text="\n\n\n\n\n\n"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/finding_sub_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="61dp"
        android:text="0"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollView40"
        app:layout_constraintTop_toBottomOf="@+id/pictureView0" />

    <CheckBox
        android:id="@+id/checkBox0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="23dp"
        android:onClick="optionChange"
        android:text="پیوسته"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/finding_sub_clear_button"
        app:layout_constraintTop_toBottomOf="@+id/finding_sub_number_text" />

</androidx.constraintlayout.widget.ConstraintLayout>