...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pagesBackground"
    tools:context=".transference.TransferenceActivity">

    <TextView
        android:id="@+id/section_labelT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="\n\n\n\n\n"
        android:textSize="16sp"
...
